# synfig

./: 1-setup-windows-msys2.sh
ETL/ETL/: _stringf.h
autobuild/: default.nix  fedora-crosscompile-linux.sh  fedora-crosscompile-win.sh  nix-package-linux-64.sh  synfigstudio-cygwin-mingw-build.sh  synfigstudio-linux-build.sh  synfigstudio-osx-build.sh
autobuild/linux/: synfigstudio.sh
synfig-core/: configure.ac
synfig-core/po/: POTFILES.in
synfig-core/src/modules/lyr_freetype/: lyr_freetype.cpp
synfig-core/src/modules/lyr_std/: bevel.cpp  curvewarp.cpp  import.cpp  insideout.cpp  julia.cpp  mandelbrot.cpp  rotate.cpp  shade.cpp  sphere_distort.cpp  stretch.cpp  supersample.cpp  timeloop.cpp  translate.cpp  warp.cpp  zoom.cpp
synfig-core/src/modules/mod_example/: filledrect.cpp  simplecircle.cpp
synfig-core/src/modules/mod_filter/: blur.cpp  colorcorrect.cpp  halftone2.cpp  halftone3.cpp  lumakey.cpp  radialblur.cpp
synfig-core/src/modules/mod_geometry/: advanced_outline.cpp  checkerboard.cpp  circle.cpp  circle.h  outline.cpp  rectangle.cpp  star.cpp  star.h
synfig-core/src/modules/mod_gradient/: conicalgradient.cpp  curvegradient.cpp  lineargradient.cpp  radialgradient.cpp  spiralgradient.cpp
synfig-core/src/modules/mod_noise/: distort.cpp  noise.cpp
synfig-core/src/modules/mod_particle/: plant.cpp
synfig-core/src/synfig/: Makefile.am  bone.cpp  canvas.cpp  filecontainerzip.cpp  filecontainerzip.h  layer.cpp  layer.h  layer_bitmap.cpp  layer_bitmap.h  layer_composite.cpp  layer_composite.h  layer_motionblur.cpp  layer_pastecanvas.cpp  layer_pastecanvas.h  layer_polygon.cpp  layer_solidcolor.cpp  loadcanvas.cpp  node.cpp  savecanvas.cpp  target_tile.cpp  transform.cpp  value.h  valuenode.cpp  valuenode_const.cpp  valuenode_const.h  zstreambuf.cpp  zstreambuf.h
synfig-core/src/synfig/layers/: layer_skeleton.cpp
synfig-core/src/synfig/rendering/: renderqueue.cpp
synfig-core/src/synfig/valuenodes/: valuenode_add.cpp  valuenode_and.cpp  valuenode_anglestring.cpp  valuenode_animatedinterface.cpp  valuenode_atan2.cpp  valuenode_average.cpp  valuenode_bline.cpp  valuenode_blinecalctangent.cpp  valuenode_blinecalcvertex.cpp  valuenode_blinecalcwidth.cpp  valuenode_blinereversetangent.cpp  valuenode_bone.cpp  valuenode_boneinfluence.cpp  valuenode_bonelink.cpp  valuenode_boneweightpair.cpp  valuenode_compare.cpp  valuenode_composite.cpp  valuenode_const.cpp  valuenode_cos.cpp  valuenode_derivative.cpp  valuenode_dilist.cpp  valuenode_dotproduct.cpp  valuenode_duplicate.cpp  valuenode_dynamic.cpp  valuenode_dynamiclist.cpp  valuenode_exp.cpp  valuenode_gradientcolor.cpp  valuenode_gradientrotate.cpp  valuenode_integer.cpp  valuenode_intstring.cpp  valuenode_join.cpp  valuenode_linear.cpp  valuenode_log.cpp  valuenode_not.cpp  valuenode_or.cpp  valuenode_pow.cpp  valuenode_radialcomposite.cpp  valuenode_range.cpp  valuenode_real.cpp  valuenode_realstring.cpp  (+23 more)
synfig-core/trunk/: configure.ac
synfig-core/trunk/po/: POTFILES.in
synfig-core/trunk/src/synfig/: Makefile.am  activepoint.h  canvas.cpp  canvas.h  color.h  context.cpp  context.h  distance.h  general.h  guid.h  importer.cpp  importer.h  keyframe.cpp  keyframe.h  layer.cpp  layer.h  listimporter.cpp  listimporter.h  loadcanvas.cpp  loadcanvas.h  main.cpp  module.h  node.h  nodebase.h  palette.h  paramdesc.h  renddesc.cpp  renddesc.h  render.h  savecanvas.cpp  savecanvas.h  surface.cpp  synfig.h  synfig_time.cpp  synfig_time.h  target.cpp  target.h  target_scanline.h  target_tile.h  timepointcollect.cpp  (+8 more)
synfig-core/trunk/src/synfig/layers/: Makefile.am  layer_bitmap.cpp  layer_bitmap.h  layer_composite.cpp  layer_composite.h  layer_duplicate.cpp  layer_duplicate.h  layer_mime.cpp  layer_mime.h  layer_motionblur.cpp  layer_motionblur.h  layer_pastecanvas.cpp  layer_pastecanvas.h  layer_polygon.cpp  layer_polygon.h  layer_shape.cpp  layer_shape.h  layer_solidcolor.cpp  layer_solidcolor.h
synfig-core/trunk/src/synfig/renderers/: Makefile.am  renderer_opengl.cpp  renderer_opengl.h  renderer_opengl_config.cpp  renderer_opengl_config.h
synfig-core/trunk/src/synfig/targets/: Makefile.am  target_multi.cpp  target_null.h  target_null_tile.h  target_scanline.cpp  target_scanline.h  target_tile.cpp  target_tile.h
synfig-core/trunk/src/synfig/valuenodes/: Makefile.am  valuenode_add.cpp  valuenode_add.h  valuenode_anglestring.cpp  valuenode_anglestring.h  valuenode_animated.cpp  valuenode_animated.h  valuenode_atan2.cpp  valuenode_atan2.h  valuenode_bline.cpp  valuenode_bline.h  valuenode_blinecalctangent.cpp  valuenode_blinecalctangent.h  valuenode_blinecalcvertex.cpp  valuenode_blinecalcvertex.h  valuenode_blinecalcwidth.cpp  valuenode_blinecalcwidth.h  valuenode_blinereversetangent.cpp  valuenode_blinereversetangent.h  valuenode_composite.cpp  valuenode_composite.h  valuenode_const.cpp  valuenode_const.h  valuenode_cos.cpp  valuenode_cos.h  valuenode_dotproduct.cpp  valuenode_dotproduct.h  valuenode_duplicate.cpp  valuenode_duplicate.h  valuenode_dynamiclist.cpp  valuenode_dynamiclist.h  valuenode_exp.cpp  valuenode_exp.h  valuenode_gradientcolor.cpp  valuenode_gradientcolor.h  valuenode_gradientrotate.cpp  valuenode_gradientrotate.h  valuenode_integer.cpp  valuenode_integer.h  valuenode_intstring.cpp  (+51 more)
synfig-core/trunk/src/tool/: main.cpp
synfig-studio/: README  configure.ac  org.synfig.SynfigStudio.appdata.xml.in
synfig-studio/images/: CMakeLists.txt  Makefile.am  installer_logo.sif  installer_logo_osx.sif  logo.sif  splash_screen-1.2.x.sif  splash_screen-morevna.sif  splash_screen_development.sif.in
synfig-studio/src/gui/: CMakeLists.txt  Makefile.am  app.cpp  app.h  asyncrenderer.cpp  asyncrenderer.h  canvasview.cpp  canvasview.h  duckmatic.cpp  iconcontroller.cpp  instance.cpp  preview.cpp  render.cpp  render.h  workarea.cpp
synfig-studio/src/gui/actionmanagers/: layeractionmanager.cpp
synfig-studio/src/gui/dialogs/: about.cpp  (+2 more)
synfig-studio/src/synfigapp/: CMakeLists.txt  action.cpp  action_system.cpp  canvasinterface.cpp  instance.cpp  pluginmanager.cpp
synfig-studio/trunk/: configure.ac
(+322 files in other folders)
